# coresense_understanding_bringup

./: CMakeLists.txt  README.md  package.xml
config/: kb_params.yaml  query_services.yaml  subscribers.yaml
launch/: coresense_decision_system.launch.py  coresense_understanding.launch.py
preload/: coresense.ttl  cso.ttl  decision_ontology.ttl  decision_scenario.ttl  iso.ttl  sysml2.ttl  uao.ttl  understanding.ttl  wind_scenario.ttl
queries/: get_concepts.sparql  get_formalisms.sparql  get_modelets.sparql  get_properties.sparql  get_representation_classes.sparql  get_requirements.sparql  modelet_exists.sparql  wind_modelet_exists.sparql
